--- a/packages/mb-frontend/package.json
+++ b/packages/mb-frontend/package.json
@@ -22,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --ext .tsx src",
+    "lint:fix": "eslint --fix --ext .tsx src"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +46,9 @@
   },
   "devDependencies": {
     "@types/react-modal": "^3.16.3",
-    "dotenv": "^16.3.1"
+    "@typescript-eslint/eslint-plugin": "^6.17.0",
+    "@typescript-eslint/parser": "^6.17.0",
+    "dotenv": "^16.3.1",
+    "eslint": "^8.56.0"
   }
 }
