--- a/packages/mb-frontend/package.json
+++ b/packages/mb-frontend/package.json
@@ -24,7 +24,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --ext .tsx src",
-    "lint:fix": "eslint --fix --ext .tsx src"
+    "lint:fix": "eslint --fix --ext .tsx src",
+    "format": "prettier --write \"src/**/*.tsx\"",
+    "format-check": "prettier --check \"src/**/*.tsx\""
   },
   "eslintConfig": {
     "extends": [
@@ -49,6 +51,9 @@
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
     "dotenv": "^16.3.1",
-    "eslint": "^8.56.0"
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.2",
+    "prettier": "^3.1.1"
   }
 }
