chore(script): add install-deps scripts for frontend and backend

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "start:frontend": "cd packages/mb-frontend && npm start",
     "start:backend": "cd packages/mb-backend && npm start",
+    "install-deps": "npm run install-deps:frontend && npm run install-deps:backend",
     "install-deps:frontend": "cd packages/mb-frontend && npm install",
     "install-deps:backend": "cd packages/mb-backend && npm install"
   },
